<resources>
    <string name="app_name">TripPlanner</string>
    <string name="login">Login</string>
    <string name="email">Your email id</string>
    <string name="password">Your password</string>
    <string name="createNewAccount">Not a user! Sign Up.</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_password">Choose Password</string>
    <string name="choose_photo">Choose avtar</string>
    <string name="select_avtar">Select</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="trips">Your trips</string>
    <string name="friends_trips">Trips created by your friends:</string>
    <string name="last_name">Your last name</string>
    <string name="first_name">Your first name</string>
    <string name="new_password">New Password</string>
    <string name="your_password">Your Password</string>
    <string name="your_friends">Your Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="logout">Logout</string>
    <string name="tripmembers">Trip Members</string>
    <string name="addfriends">People you may know</string>
    <string name="addtrip">Add Trip</string>
    <string name="listofmembers">Friends in this trip</string>
    <string name="places">Places to visit:</string>
</resources>