<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="42dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password" />

    <Button
        android:id="@+id/btn_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@string/createNewAccount"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="33dp"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_alignLeft="@+id/btn_create_new_account"
        android:layout_alignStart="@+id/btn_create_new_account"
        android:layout_alignRight="@+id/btn_create_new_account"
        android:layout_alignEnd="@+id/btn_create_new_account" />

</RelativeLayout>