<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TripsFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/addtrip" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fab"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="@string/trips"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <ListView
        android:id="@+id/your_trips"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"></ListView>

    <TextView
        android:id="@+id/friendstrips"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/your_trips"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/friends_trips"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <ListView
        android:id="@+id/friends_trips"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_below="@+id/friendstrips"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />



</RelativeLayout>