<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/createNewAccount"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/im_choose_avtar"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email" />

    <EditText
        android:id="@+id/et_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_firstName"
        android:layout_alignStart="@+id/et_firstName"
        android:layout_below="@+id/et_firstName"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_email"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_confirm_password"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/et_confirm_password"
        android:layout_marginBottom="11dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@string/signup"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_signup"
        android:layout_alignBottom="@+id/btn_signup"
        android:layout_alignLeft="@+id/et_confirm_password"
        android:layout_alignStart="@+id/et_confirm_password"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="@android:string/cancel"
        android:textAllCaps="false" />

    <ImageButton
        android:id="@+id/im_choose_avtar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_person" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_signup"
        android:layout_alignEnd="@+id/btn_signup"
        android:layout_alignLeft="@+id/btn_cancel"
        android:layout_alignRight="@+id/btn_signup"
        android:layout_alignStart="@+id/btn_cancel"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>
</RelativeLayout>