<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ImageButton
        android:id="@+id/im_change_image"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="178dp"
        android:layout_marginLeft="178dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="164dp"
        android:background="@drawable/profile" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_change_image"
        android:layout_alignLeft="@+id/btn_change_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="-14dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="81dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_first_name"
        android:layout_alignStart="@+id/et_first_name"
        android:layout_below="@+id/et_first_name"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="10dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="SAVE CHANGES"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_below="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_save"
        android:layout_alignEnd="@+id/btn_save"
        android:layout_alignRight="@+id/btn_save"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPersonName|textPassword" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/et_last_name"
        android:layout_alignLeft="@+id/et_last_name"
        android:layout_alignStart="@+id/et_last_name"
        android:layout_alignRight="@+id/et_last_name"
        android:layout_alignEnd="@+id/et_last_name">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_newPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="?android:attr/colorFocusedHighlight"
        android:text="Change Password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_save"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="147dp"
        android:text="Change Password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</RelativeLayout>